# solara

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Chiant  Dockerfile  Procfile  README.md  SECURITY.md  SERVER.md  docker-compose.debug.yml  docker-compose.yml  mypy-v3.ini  mypy.ini  pyproject.toml  release.md  release.sh  requirements-dev.txt  requirements.txt  runtime.txt  test_auth.py
.ci-package-locks/code-quality/: python3.12.txt  python3.8.txt  python3.9.txt
.ci-package-locks/integration/: osubuntu-python3.8-ipywidgets7.txt  osubuntu-python3.8-ipywidgets8.txt  osubuntu-python3.8-voila0.3.0-ipywidgets7.7.txt  osubuntu-python3.8-voila0.4.0-ipywidgets8.0.txt  osubuntu-python3.9-ipywidgets7.txt  osubuntu-python3.9-ipywidgets8.txt  oswindows-python3.8-ipywidgets7.txt  oswindows-python3.8-ipywidgets8.txt  oswindows-python3.8-voila0.4.0-ipywidgets8.0.txt  oswindows-python3.9-ipywidgets7.txt  oswindows-python3.9-ipywidgets8.txt
.ci-package-locks/integration-vue3/: osubuntu-ipywidgets8.txt  osubuntu-voila0.4.0-ipywidgets8.0.txt
.ci-package-locks/pyinstaller/: osmacos-python3.10.txt  osubuntu-python3.10.txt  oswindows-python3.10.txt
.ci-package-locks/unit/: osmacos-python3.12-ipywidgets7.7.txt  osmacos-python3.12-ipywidgets8.0.txt  osmacos-python3.6-ipywidgets7.7.txt  osmacos-python3.7-ipywidgets7.7.txt  osmacos-python3.8-ipywidgets7.7.txt  osmacos-python3.8-ipywidgets8.0.txt  osmacos-python3.9-ipywidgets7.7.txt  osmacos-python3.9-ipywidgets8.0.txt  osubuntu-python3.12-ipywidgets7.7.txt  osubuntu-python3.12-ipywidgets8.0.txt  osubuntu-python3.6-ipywidgets7.7.txt  osubuntu-python3.7-ipywidgets7.7.txt  osubuntu-python3.8-ipywidgets7.7.txt  osubuntu-python3.8-ipywidgets8.0.txt  osubuntu-python3.9-ipywidgets7.7.txt  osubuntu-python3.9-ipywidgets8.0.txt  oswindows-python3.12-ipywidgets7.7.txt  oswindows-python3.12-ipywidgets8.0.txt  oswindows-python3.8-ipywidgets7.7.txt  oswindows-python3.8-ipywidgets8.0.txt  oswindows-python3.9-ipywidgets7.7.txt  oswindows-python3.9-ipywidgets8.0.txt
.github/: dependabot.yml  pull_request_template.md  pycafe-create-status.py
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md
.github/workflows/: build.yml  codequality.yaml  create_github_release.yml  installation.yml  integration.yml  integration_vue3.yml  javascript.yaml  pycafe.yml  release.yaml  release_solara_vuetify_app-v3.yaml  release_solara_vuetify_app.yaml  test.yaml  unittest.yml  webdeploy.yml
docs/: design-redis-state-persistence.md  memleak_demo.py  memory-leak-detection.md  memory-leak-found-report-previous-reactive-watch.md  memory-leak-strategy-render-context-weakref.md  memory-usage-inspection.md
docs/memory-measurement/: check_assumptions.py  churn_app.py  click_app.py  gc_freeze_bench_app.py  kitchen_sink_app.py  leak_canary_app.py  measure.py  measure_docker.py  measure_gc_freeze.py
docs/plans/: 2026-03-22-002-feat-router-query-deprecate-search-plan.md
examples/state-persistence-failover/: Caddyfile  Caddyfile.docker  README.md  app.py  docker-compose.yml  run.sh
pyinstaller/: sample_app.py  solara-app-entrypoint.py  solara.icns  solara.spec
pyinstaller/embedded_browser/: render_test.vue  solara-qt-test.py  solara-qt.spec  test_app.py
pyinstaller/hooks/: hook-ipyreact.py  hook-ipyvuetify.py  hook-solara.py  hook-solara_server.py  hook-solara_ui.py
pyinstaller/minimal/: solara.spec
solara/: __init__.py  __main__.py  _stores.py  alias.py  autorouting.py  cache.py  checks.html  checks.py  comm.py  core.py  datatypes.py  download_cdn.py  express.py  html.py  kitchensink.py  layout.py  lifecycle.py  memoize.py  minisettings.py  mkdocs.yml  reactive.py  routing.py  settings.py  tasks.py  toestand.py  util.py  validate_hooks.py
solara/components/: __init__.py  _transitions.py  alert.py  applayout.py  button.py  card.py  checkbox.py  code_highlight_css.py  code_highlight_css.vue  columns.py  component_vue.py  components.py  confirmation_dialog.py  cross_filter.py  dataframe.py  dataframe_test.py  datatable.py  datatable.vue  datatable_test.py  datatable_v3.vue  details.py  download.vue  echarts.py  echarts.vue  figure_altair.py  file_browser.py  file_download.py  file_drop.py  file_drop.vue  file_input.py  file_list_widget.vue  file_list_widget_v3.vue  head.py  head_tag.py  head_tag.vue  image.py  input.py  input_file.py  input_text_area.py  link.py  (+29 more)
solara/examples/: README.md  __init__.py  all.py  altair.py  bqplot.py  calculator.py  components.py  demo.py  doc.py  doc_use_download.py  docutils.py  intro.py  ipycanvas.py  libraries.py  plotly.py  pokemon.py
solara/hooks/: __init__.py  dataframe.py  hooks_test.py  misc.py  use_reactive.py  use_thread.py  validate_hooks.py
solara/lab/: __init__.py  toestand.py
solara/scope/: __init__.py  types.py
solara/server/: __init__.py  app.py  auth_decorator.py  basic_auth_decorator.py  cdn_helper.py  esm.py  esm_vue.py  fastapi.py  flask.py  io.py  jupytertools.py  kernel.py  kernel_context.py  patch.py  patch_test.py  pyodide.py  qt.py  reload.py  server.py  server_test.py  settings.py  shell.py  starlette.py  sync_ws_write.py  telemetry.py  threaded.py  utils.py  websocket.py
solara/state/: __init__.py  _settings.py  backend.py  breaker.py  derive.py  envelope.py  memory.py  persist.py  redis.py  stats.py  worker.py
solara/template/: button.py  markdown.py
solara/template/portal/: .flake8  .pre-commit-config.yaml  LICENSE  Procfile  pyproject.toml
solara/template/portal/solara_portal/: __init__.py  data.py
solara/template/portal/solara_portal/components/: __init__.py  article.py  data.py  header.py  layout.py
solara/template/portal/solara_portal/content/articles/: equis-in-vidi.md  substiterat-vati.md
solara/template/portal/solara_portal/pages/: __init__.py  tabular.py
solara/template/portal/solara_portal/pages/article/: __init__.py
solara/template/portal/solara_portal/pages/viz/: __init__.py  overview.py
solara/test/: pytest_plugin.py
solara/website/: utils.py
tests/: conftest.py  titanic.csv
(+737 files in other folders)
