[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"



[project]
name = "solara-portal"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "solara",
]

[tool.flit.module]
name = "solara_portal"


[project.urls]
Home = "https://www.github.com/widgetti/solara"

[tool.black]
line-length = 160

[tool.isort]
profile = "black"
