[build-system]
requires = ["hatchling >=0.25"]
build-backend = "hatchling.build"

[project]
name = "solara-portal"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "solara",
]

[tool.hatch.version]
path = "solara_portal/__init__.py"



[project.urls]
Home = "https://www.github.com/widgetti/solara"

[tool.black]
line-length = 160

[tool.isort]
profile = "black"
